tests/test_assets/semantic/invalid/literals/scientific_notation_is_float.cog
scientific_notation_is_float::() -> void {
    value: i32 = 1e3;
}
