tests/test_assets/semantic/invalid/literals/scientific_notation_is_float.expected
semantic error at line 2: initializer type does not match declared type
1 semantic error generated.
